<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_this_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/default_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/btn_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_date"
        tools:text="本月: 3000" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:backgroundTint="#FFF"
        android:minHeight="0dp"
        android:text="@string/add_tally_today"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_item_margin"
        android:backgroundTint="#FFF"
        android:minHeight="0dp"
        android:text="@string/add_tally_btn_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_top"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:background="@color/dividerColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_date" />

    <Button
        android:id="@+id/btn_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:backgroundTint="#FFF"
        android:ems="6"
        android:text="@string/add_tally_payment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_top" />

    <TextView
        android:id="@+id/tv_equation"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:ellipsize="start"
        android:textColor="@color/gold"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/btn_payment"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_payment"
        tools:text="20+30" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/et_money"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:autoSizeTextType="uniform"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:hint="0"
        android:textColor="@color/gold"
        android:textColorHint="@color/gold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/btn_payment"
        app:layout_constraintLeft_toRightOf="@id/btn_payment"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_equation" />

    <Button
        android:id="@+id/btn_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_item_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:backgroundTint="#FFF"
        android:ems="6"
        android:text="@string/add_tally_category"
        app:layout_constraintBottom_toBottomOf="@+id/et_project"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/et_project"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_item_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:hint="@string/add_tally_project"
        android:lines="1"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@id/btn_category"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_money" />

    <Button
        android:id="@+id/btn_account_book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_item_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:backgroundTint="#FFF"
        android:text="@string/add_tally_account_book"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_project" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_input_plate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:spanCount="4" />

</androidx.constraintlayout.widget.ConstraintLayout>